added template page

--- a/LetsChill/app/src/main/res/layout/activity_main.xml
+++ b/LetsChill/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,45 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="me.alexjordache.letschill.MainActivity">
 
-    <TextView
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/marker"
+        android:id="@+id/mainMarker"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/location1"
+        android:layout_below="@+id/mainMarker"
+        android:layout_marginTop="40dp"
+        android:hint="Location 1..."
+        android:backgroundTint="@color/colorPrimary"
+        />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/location2"
+        android:layout_below="@+id/location1"
+        android:layout_marginTop="40dp"
+        android:hint="Location 2..."
+        android:backgroundTint="@color/colorPrimary"
+        />
+
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_below="@id/location2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="Submit"
+        />
+
+
 </RelativeLayout>
